# mrs_active_epistemic_inference

./: .gitignore  README.md  notebook_active_inference_data_export_convergent.ipynb  notebook_active_inference_data_export_exclusive.ipynb  notebook_aif_iterative_goals.ipynb  notebook_aif_iterative_goals_data.ipynb  notebook_aif_single_goals.ipynb
aif_catkin_ws/aif_gazebo/: CMakeLists.txt  package.xml
aif_catkin_ws/aif_gazebo/configs/: aif_gazebo_convergent_params.yaml  aif_gazebo_iterative_params.yaml  aif_gazebo_jackals_iterative_params.yaml  aif_lab_params.yaml
aif_catkin_ws/aif_gazebo/launch/: amcl_aif_launch.launch  gazebo_ground_truth_aif_launch.launch  lab_aif_launch.launch  test_param.launch
aif_catkin_ws/aif_gazebo/rviz/: three_hetero_robots_rviz.rviz  two_jackal_rviz.rviz  two_rosbot_rviz.rviz
aif_catkin_ws/aif_gazebo/scripts/Archive/: aif_functions_epistemic_clustering.py  aif_functions_epistemic_importance_sampling.py  aif_functions_isobeliefs.py  aif_functions_isobeliefs_adaptable.py  aif_functions_isobeliefs_epistemic.py  aif_functions_isobeliefs_epistemic_dt.py  aif_functions_isobeliefs_exclusive.py  aif_functions_isobeliefs_mcts.py  aif_functions_isobeliefs_rhc.py  ma_pso.py  ma_rhc.py  ma_rhc_beliefs.py
aif_catkin_ws/aif_gazebo/scripts/experiment_methods/: aif_functions_isobeliefs_convergent_lab.py  lab_goal_publisher.py  launch_lab_robots.py  republish_goal_markers.py  run_lab_aif.py  transform_vicon_to_pose.py
aif_catkin_ws/aif_gazebo/scripts/gazebo_methods/: aif_functions_isobeliefs_convergent_gazebo.py  aif_functions_iterative_sampling_gazebo.py  launch_amcl.py  launch_gazebo_ground_truth.py  run_gazebo_aif.py  (+2 more)
aif_catkin_ws/aif_gazebo/src/: active_inference_server.py
(+83 files in other folders)
