<package>
  <name>multi_jackal_aif</name>
  <version>0.0.5</version>
  <description>Tutorials for multi-Jackal active inference simulations.</description>
  
  <maintainer email="laurenbramblett0@gmail.com">Lauren Bramblett</maintainer>
  <author     email="laurenbramblett0@gmail.com">Lauren Bramblett</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/multi_jackal_tutorials</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>multi_jackal_base</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>multi_jackal_base</run_depend>
  <run_depend>rviz</run_depend>
</package>
